# ai-avatar-companion

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  SECURITY.md  TESTING.md  ai-avatar-companion-design.md  config.yaml  main.py  requirements-ci.txt  requirements-dev.txt  requirements.txt  run.py
.claude/: launch.json
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: tag-release.yml  tests.yml
app/: appearance.py  config.py  furigana.py  greetings.py  levels.py  logging_setup.py  memory.py  memory_extractor.py  server.py  settings.py  setup.py  telemetry.py  transcript.py
app/pipeline/: llm.py  stt.py  tts.py
docs/superpowers/plans/: 2026-07-14-avatar-appearance-awareness.md
packaging/: build.sh  nova-server.spec
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_appearance.py  test_config.py  test_furigana.py  test_greetings.py  test_levels.py  test_logging_setup.py  test_memory.py  test_memory_extractor.py  test_pipeline_integration.py  test_pipeline_llm.py  test_pipeline_stt.py  test_pipeline_tts.py  test_server_features.py  test_server_integration.py  test_server_recording.py  test_server_replay.py  test_server_security.py  test_server_settings.py  test_server_transcript.py  test_telemetry.py  test_transcript.py  test_version_sync.py
tools/: report.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.js
ui/src/: main.js  style.css
(+1 files in other folders)
