[package]
name = "nova"
version = "0.2.0"
description = "Nova — a local-first English practice friend"
authors = ["Ondrej Macek"]
edition = "2021"

[lib]
name = "nova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
log = "0.4"
env_logger = "0.11"
